Add the uses-cases, take-action and footer section

--- a/assets/css files/style.css
+++ b/assets/css files/style.css
@@ -4,13 +4,13 @@
   --primary-clr: #091133;
   --secondary-clr: #505f98;
   --text-accent: #5d6970;
-  --bgc-clr: #f0f0f0;
   --header-clr: #37447e;
   --big-text-clr: #222f65;
   --desc-text-clr: #6f7cb2;
   --box-clr: #111b47;
   --icon-clr: #b0b8bc;
   --white-clr: #ffffff;
+  --footer-clr: #E7ECFF;
 
   --primary-font: "Roboto", sans-serif;
 }
@@ -104,6 +104,7 @@ header button a {
   font-size: 18px;
   color: var(--secondary-clr);
   line-height: 1.7;
+  z-index: 99;
 }
 
 .hero .btns {
@@ -126,6 +127,7 @@ header button a {
   width: 180px;
   height: 36px;
   border: 3px solid var(--box-clr);
+  background-color: var(--white-clr);
 }
 
 .hero .btns button:last-child a {
@@ -190,4 +192,168 @@ header button a {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+
+/* uses-cases section  */
+
+
+
+.use-case {
+  display: flex;
+  justify-content: space-around;
+  height: 540px;
+}
+
+.use-case .right-side {
+  width: 460px;
+  line-height: 1.7;
+}
+
+.use-case .right-side h2 {
+  font-size: 36px;
+  color: var(--primary-clr);
+}
+
+.use-case .right-side p {
+  color: var(--desc-text-clr);
+}
+
+.use-case .learn-more {
+  width: 150px;
+  height: 24px;
+  background-color: var(--box-clr);
+}
+
+.use-case .learn-more a {
+  color: var(--white-clr);
+  font-size: 14px;
+}
+
+
+/* take action section style */
+
+.take-action {
+  position: relative;
+}
+
+.take-action .rect {
+  position: absolute;
+  background-image: url(../images/Rectangle.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 1550px;
+  height: 800px;
+  right: 0;
+}
+
+.take-action .get-started {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.take-action .get-started h2:nth-child(1) {
+  font-size: 36px;
+  color: var(--primary-clr);
+  z-index: 99;
+  margin-top: 100px;
+}
+
+.take-action .get-started p:nth-child(2) {
+  color: var(--desc-text-clr);
+  z-index: 99;
+  width: 600px;
+  text-align: center;
+  line-height: 1.7;
+}
+
+.take-action .get-started h2:nth-child(3){
+  color: var(--big-text-clr);
+  font-size: 50px;
+  z-index: 99;
+  width: 350px;
+  text-align: center;
+  line-height: 1.4;
+  margin: 18px 0;
+}
+
+.take-action .get-started p:nth-child(4) {
+  font-size: 12px;
+  color: var(--text-accent);
+  z-index: 99;
+}
+
+.take-action .get-started button {
+  width: 190px;
+  height: 25px;
+  background-color: var(--box-clr);
+  z-index: 99;
+}
+
+.take-action .get-started button a {
+  color: var(--white-clr);
+  font-size: 14px;
+}
+
+
+/* footer section style */
+
+footer {
+  background-color: var(--footer-clr);
+  height: 216px;
+  margin-top: 100px;
+}
+
+footer .upper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-inline: 130px;
+}
+
+footer .upper h3 {
+  font-size: 26px;
+  color: var(--header-clr);
+ z-index: 99;
+}
+
+footer .upper button {
+  width: 190px;
+  height: 25px;
+  background-color: var(--box-clr);
+  z-index: 99;
+}
+
+footer .upper button a {
+  color: var(--white-clr);
+  font-size: 14px;
+}
+
+footer .lower {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-inline: 130px;
+}
+
+footer .lower ul {
+  list-style-type: none;
+  display: flex;
+  padding-inline: 0;
+  gap: 40px;
+  font-size: 14px;
+  width: 100%;
+}
+
+footer .lower .icons {
+  color: var(--icon-clr);
+  display: flex;
+  gap: 30px;
+  z-index: 99;
+}
+
+footer hr {
+  margin-inline: 130px;
 }
