--- a/assets/css files/style.css
+++ b/assets/css files/style.css
@@ -138,6 +138,7 @@ header button a {
 
 .features {
   display: flex;
+  gap: 50px;
   padding: 164px 170px;
   margin-top: 100px;
 }
@@ -356,4 +357,23 @@ footer .lower .icons {
 
 footer hr {
   margin-inline: 130px;
+}
+
+
+.button:hover {
+  background-color: #222850;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+  transform: translateY(-2px);
+}
+
+.effect {
+  /* ... other styles ... */
+  transition: all 0.3s ease-in-out;
+}
+
+.effect:hover {
+  background-color: #222850;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
+  transform: scale(1.05); 
+  color: #fff; 
 }
