--- a/assets/css files/style.css
+++ b/assets/css files/style.css
@@ -11,7 +11,6 @@
   --icon-clr: #b0b8bc;
   --white-clr: #ffffff;
   --footer-clr: #E7ECFF;
-
   --primary-font: "Roboto", sans-serif;
 }
 
@@ -144,7 +143,7 @@ header button a {
 }
 
 .features .left-side {
-  width: 565px;
+  width: 564px;
 }
 
 .features .left-side h2 {
@@ -231,6 +230,18 @@ header button a {
   font-size: 14px;
 }
 
+.bounce {
+  animation: bounce 2s infinite ease-in-out;
+}
+
+@keyframes bounce {
+  0%, 100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.12);
+  }
+}
 
 /* take action section style */
 
@@ -359,10 +370,31 @@ footer hr {
   margin-inline: 130px;
 }
 
+.alternate-text {
+  animation: color-alternate 1s infinite;
+}
+
+.alternate-text {
+  color: var(--secondary-clr);
+}
+
+.alternate-text {
+  color: var(--big-text-clr);
+}
+
+@keyframes color-alternate {
+  0%, 100% {
+    color: var(--big-text-clr);
+  }
+  50% {
+    color: var(--secondary-clr);
+  }
+}
+
 
 .button:hover {
   background-color: #222850;
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
   transform: translateY(-2px);
 }
 
@@ -374,6 +406,6 @@ footer hr {
 .effect:hover {
   background-color: #222850;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
-  transform: scale(1.05); 
+  transform: scale(1.2); 
   color: #fff; 
 }
